--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <body>
     <!-- header section starts -->
-    <header>
-        <nav class="navbar navbar-expand-lg">
+    <header class="my-5">
+        <nav class="navbar fixed-top navbar-expand-lg bg-white">
             <div class="container">
                 <div><a class="navbar-brand fw-bold fst-italic primary-text" href="#">EasyTech</a></div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -56,12 +56,12 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active slide-bg1">
-                        <div class="position-absolute top-50 start-50 translate-middle text-center text-white">
+                        <div class="position-absolute top-50 start-50 translate-middle text-center text-white w-50">
                             <h1>Get Started Digital Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable content of
                                 a
                                 page when looking at its layout.</p>
-                            <button class="btn primary-bg text-white">Get Started</button>
+                            <button class="btn primary-bg ">Get Started</button>
                         </div>
                     </div>
                     <div class="carousel-item slide-bg2">
@@ -98,7 +98,132 @@
     </header>
     <!-- header ends  -->
     <!-- main sections  -->
-
+    <section class="container my-5">
+        <div class="d-flex justify-content-center">
+            <div class="text-center w-50">
+                <h2>Discover Our Popular Courses</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking
+                    at its layout.</p>
+            </div>
+        </div>
+        <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 g-4">
+            <div class="col">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class=" col-12 col-md-4">
+                            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of the card.</p>
+                                <h6 class="primary-text fw-bold">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class=" col-12 col-md-4">
+                            <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of the card.</p>
+                                <h6 class="primary-text fw-bold">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class=" col-12 col-md-4">
+                            <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of the card.</p>
+                                <h6 class="primary-text fw-bold">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class=" col-12 col-md-4">
+                            <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up
+                                    the
+                                    bulk
+                                    of the card.</p>
+                                <h6 class="primary-text fw-bold">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class=" col-12 col-md-4">
+                            <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up
+                                    the
+                                    bulk
+                                    of the card.
+                                </p>
+                                <h6 class="primary-text fw-bold">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class=" col-12 col-md-4">
+                            <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up
+                                    the
+                                    bulk
+                                    of the card.</p>
+                                <h6 class="primary-text fw-bold">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center my-5"><button class="btn primary-bg">See More Courses</button></div>
+    </section>
+    <!-- explore learning institute section  -->
     <!-- bootstrap js link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
