--- a/index.html
+++ b/index.html
@@ -224,6 +224,60 @@
         <div class="d-flex justify-content-center my-5"><button class="btn primary-bg">See More Courses</button></div>
     </section>
     <!-- explore learning institute section  -->
+    <section class="container">
+        <div class="card mb-3 secondary-bg border-0">
+            <div class="row g-0">
+                <div class="col-md-5">
+                    <img src="images/working.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-7  d-flex align-items-center ">
+                    <div class="card-body">
+                        <h2 class="card-title fw-bold">Explore The elearning Institute</h2>
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised words
+                            which don't look even slightly believable.</p>
+                        <p class="d-md-none d-lg-block" id="exploreinstitute"> If you are going to use a passage of
+                            Lorem
+                            Ipsum,
+                            you need to be sure.
+                            Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                            generators on
+                            the
+                            Internet tend to repeat predefined..</p>
+                        <div class="row">
+                            <div class="col-4">
+                                <h2 class="fw-bold">3.2K+</h2>
+                                <p>Online Course</p>
+                            </div>
+                            <div class="col-4">
+                                <h2 class="fw-bold">600+</h2>
+                                <p>Expert member</p>
+                            </div>
+                            <div class="col-4">
+                                <h2 class="fw-bold">1k+</h2>
+                                <p>Rating & Review</p>
+                            </div>
+                        </div>
+                        <div><button class="btn primary-bg">Read More</button></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ready to join section  -->
+    <section class="container primary-bg d-lg-flex align-items-center justify-content-between p-5 my-5 ">
+        <div class=" d-flex justify-content-center d-lg-block text-white">
+            <div class="w-50 text-center text-lg-start">
+                <h2 class="fw-bold">Ready to join?</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a
+                    page when
+                    looking at its layout.</p>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center"> <button class="btn primary-text bg-white">Register Now</button>
+        </div>
+    </section>
+
     <!-- bootstrap js link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
