--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!-- font awesome kit  -->
+    <script src="https://kit.fontawesome.com/5f56fc4537.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -276,6 +278,114 @@
         </div>
         <div class="d-flex justify-content-center"> <button class="btn primary-text bg-white">Register Now</button>
         </div>
+    </section>
+    <!-- successful students  -->
+    <section class="container my-5">
+        <div>
+            <h2>Meet Our Successfull Students</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking
+                at its layout.</p>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="border rounded-3">
+                    <img src="images/student/student-1.png" class="img-fluid" alt="...">
+                    <div class="p-2">
+                        <h5 class=" fw-bold">Awlad Hossain</h5>
+                        <p>UIUX Designer</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="border rounded-3">
+                    <img src="images/student/student-2.png" class="img-fluid" alt="...">
+                    <div class="p-2">
+                        <h5 class=" fw-bold">Jannatul Islam</h5>
+                        <p>Motion Design</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="border rounded-3">
+                    <img src="images/student/student-3.png" class="img-fluid" alt="...">
+                    <div class="p-2">
+                        <h5 class=" fw-bold">Imran Hossain</h5>
+                        <p>Graphic Designer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="border rounded-3">
+                    <img src="images/student/student-4.png" class="img-fluid" alt="...">
+                    <div class="p-2">
+                        <h5 class=" fw-bold">Nishi Akter</h5>
+                        <p>Web Developer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center d-md-none d-lg-flex"><button class="btn primary-bg mt-5">View
+                All</button></div>
+    </section>
+    <!-- students feedback section  -->
+    <section class="container my-5">
+        <div class="row row-cols-1 row-cols-lg-2 g-4">
+            <div class="col">
+                <div class="card p-3 secondary-bg">
+                    <div class="d-flex justify-content-between py-3">
+                        <div><img src="images/comma.png" alt=""></div>
+                        <p>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star-half-stroke text-warning"></i>
+                        </p>
+                    </div>
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable. If you are going to use a passage of Lorem.
+                    </p>
+                    <div class="d-flex align-items-center gap-3">
+                        <img src="images/student/student-5.png" alt="">
+                        <div class="pt-3">
+                            <h5 class="fw-bold">Awlad Hossain</h5>
+                            <p>UI Designer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card p-3 secondary-bg">
+                    <div class="d-flex justify-content-between py-3">
+                        <div><img src="images/comma.png" alt=""></div>
+                        <p>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star-half-stroke text-warning"></i>
+                        </p>
+                    </div>
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable. If you are going to use a passage of Lorem.
+                    </p>
+                    <div class="d-flex align-items-center gap-3">
+                        <img src="images/student/student-6.png" alt="">
+                        <div class="pt-3">
+                            <h5 class="fw-bold">Shanta Akter</h5>
+                            <p>Graphic Designer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <!-- bootstrap js link  -->
