--- a/index.html
+++ b/index.html
@@ -331,6 +331,12 @@
     </section>
     <!-- students feedback section  -->
     <section class="container my-5">
+        <div class="text-center py-5">
+            <h2 class="fw-bold">Some Students Feedback</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking
+                at its layout.</p>
+        </div>
         <div class="row row-cols-1 row-cols-lg-2 g-4">
             <div class="col">
                 <div class="card p-3 secondary-bg">
@@ -386,6 +392,94 @@
             </div>
         </div>
 
+    </section>
+    <!-- FAQ section  -->
+    <section class="container my-5">
+        <div class="text-center  pt-5 pb-3">
+            <h2 class="fw-bold">Frequently Asked Questions</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout.</p>
+            <hr>
+        </div>
+
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item  border my-2">
+                <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        What is difference between Flexbox and css-grid ?
+                    </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">CSS Grid and Flexbox are layout models that share similarities and can
+                        be used together. The key difference is that CSS Grid can be used to create two-dimensional
+                        layouts, while Flexbox can only be used to create one-dimensional layouts.</div>
+                </div>
+            </div>
+            <div class="accordion-item border my-2">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        What is the difference between bootstrap and tailwind ?
+                    </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Bootstrap comes with a set of pre-styled responsive, mobile-first
+                        components that possess a definite UI kit. Tailwind CSS uses a set of utility classes to create
+                        a neat UI with more flexibility and uniqueness. Sites created using Bootstrap follow the generic
+                        pattern that makes them look identical.</div>
+                </div>
+            </div>
+            <div class="accordion-item border my-2">
+                <h2 class="accordion-header" id="flush-headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        What is CSS box model ?
+                    </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">The CSS box model is essentially a box that wraps around every HTML
+                        element. It consists of: margins, borders, padding, and the actual content.</div>
+                </div>
+            </div>
+            <div class="accordion-item border my-2">
+                <h2 class="accordion-header" id="flush-headingfour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapsefour" aria-expanded="false" aria-controls="flush-collapsefour">
+                        What is semantic HTML tag ?
+                    </button>
+                </h2>
+                <div id="flush-collapsefour" class="accordion-collapse collapse" aria-labelledby="flush-headingfour"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">The HTML semantics refers to the tags that provide meaning to an HTML
+                        page rather than just presentation. It makes HTML more comprehensible by better defining the
+                        different sections and layout of web pages
+                        <ul>
+                            <li>Header</li>
+                            <li>Section</li>
+                            <li>Article</li>
+                            <li>Footer etc...</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- companys section  -->
+    <section class="container">
+        <h2 class="text-center fw-bold py-5">Trusted by over 800+ companies</h2>
+        <div class="d-none d-lg-flex justify-content-between">
+            <div><img src="images/company/company-1.png" alt=""></div>
+            <div><img src="images/company/company-2.png" alt=""></div>
+            <div><img src="images/company/company-3.png" alt=""></div>
+            <div><img src="images/company/company-4.png" alt=""></div>
+            <div><img src="images/company/company-5.png" alt=""></div>
+            <div><img src="images/company/company-6.png" alt=""></div>
+        </div>
     </section>
 
     <!-- bootstrap js link  -->
