--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="my-5">
         <nav class="navbar fixed-top navbar-expand-lg bg-white">
             <div class="container">
-                <div><a class="navbar-brand fw-bold fst-italic primary-text" href="#">EasyTech</a></div>
+                <div><a class="navbar-brand fw-bold fst-italic primary-text" href="#">///EasyTech///</a></div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -35,19 +35,20 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Courses</a>
+                            <a class="nav-link" href="#Courses">Courses</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Deals</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Success</a>
+                            <a class="nav-link" href="#success">Success</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
                         </li>
                     </ul>
-                    <div class=""><a class="btn primary-border primary-text" href="">Register</a>
+                    <div class=""><a class="btn primary-border primary-text" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">Register</a>
                     </div>
                 </div>
 
@@ -100,7 +101,8 @@
     </header>
     <!-- header ends  -->
     <!-- main sections  -->
-    <section class="container my-5">
+    <!-- courses section  -->
+    <section class="container my-5" id="Courses">
         <div class="d-flex justify-content-center">
             <div class="text-center w-50">
                 <h2>Discover Our Popular Courses</h2>
@@ -267,20 +269,23 @@
         </div>
     </section>
     <!-- ready to join section  -->
-    <section class="container primary-bg d-lg-flex align-items-center justify-content-between p-5 my-5 ">
-        <div class=" d-flex justify-content-center d-lg-block text-white">
-            <div class="w-50 text-center text-lg-start">
+    <section class="container primary-bg p-5 my-5 ">
+        <div class="row">
+            <div class="col-12 col-lg-7 text-center text-lg-start">
                 <h2 class="fw-bold">Ready to join?</h2>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a
                     page when
                     looking at its layout.</p>
             </div>
-        </div>
-        <div class="d-flex justify-content-center"> <button class="btn primary-text bg-white">Register Now</button>
+
+            <div class="col-12 text-center col-lg-5 d-lg-flex align-items-center justify-content-end"> <button
+                    class="btn primary-text bg-white" data-bs-toggle="modal" data-bs-target="#exampleModal">Register
+                    Now</button>
+            </div>
         </div>
     </section>
     <!-- successful students  -->
-    <section class="container my-5">
+    <section class="container my-5" id="success">
         <div>
             <h2>Meet Our Successfull Students</h2>
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when
@@ -470,9 +475,9 @@
 
     </section>
     <!-- companys section  -->
-    <section class="container">
+    <section class="container d-none">
         <h2 class="text-center fw-bold py-5">Trusted by over 800+ companies</h2>
-        <div class="d-none d-lg-flex justify-content-between">
+        <div class="d-flex justify-content-between">
             <div><img src="images/company/company-1.png" alt=""></div>
             <div><img src="images/company/company-2.png" alt=""></div>
             <div><img src="images/company/company-3.png" alt=""></div>
@@ -481,6 +486,68 @@
             <div><img src="images/company/company-6.png" alt=""></div>
         </div>
     </section>
+
+    <!-- modal for Register -->
+    <section>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Register Now</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp" placeholder="Enter your Email">
+                            </div>
+                            <div class="mb-3">
+                                <input type="password" class="form-control" id="exampleInputPassword1"
+                                    placeholder="Password">
+                            </div>
+                            <div class="mb-3 form-check">
+                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label" for="exampleCheck1">Accept Our <a href="">Terms &
+                                        Conditions</a></label>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- footer section  -->
+    <footer class="bg-dark d-flex align-items-center justify-content-center py-5 mt-5 ">
+        <div>
+            <h2 class="primary-text fw-bold fst-italic text-center">///EasyTech///</h2>
+            <div class="text-center">
+                <p class="text-white">Office 41, Zawaya Buildin, Ghala Muscat,
+                    Sultanate of Oman</p>
+                <p class="text-white"><a class="text-decoration-none text-white" href="">Privacy Ploicy</a> |
+                    <a class="text-decoration-none text-white" href="">Terms of use</a>
+                </p>
+            </div>
+            <div class="d-flex justify-content-center gap-5">
+                <div>
+                    <a target="_blank" href="https://www.facebook.com/"><i
+                            class="fa-brands fa-square-facebook text-white"></i></a>
+                </div>
+                <div>
+                    <a target="_blank" href="https://twitter.com/"><i class="fa-brands fa-twitter text-white"></i></a>
+                </div>
+                <div>
+                    <a target="_blank" href="https://www.instagram.com/"><i
+                            class="fa-brands fa-square-instagram text-white"></i></a>
+                </div>
+                <div>
+                    <a target="_blank" href="https://www.linkedin.com/"><i
+                            class="fa-brands fa-linkedin text-white"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- bootstrap js link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
